k8s/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx 
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
  selector:
    app: nginx
